2008-10-01  David A. Capello  <davidcapello@gmail.com>

	* src/raster/undo.cpp: Renamed undo_undo and undo_redo to
	undo_do_undo and undo_do_redo.
	(undo_clear_redo): Added (used by Undoable when the final result
	isn't committed).

	* src/dialogs/aniedit.cpp (anieditor_msg_proc): Uses Undoable to
	move frames, and move layers.

	* src/commands/cmd_new_layer.cpp (cmd_new_layer_execute):
	* src/commands/cmd_remove_cel.cpp (cmd_remove_cel_execute):
	* src/commands/cmd_remove_frame.cpp (cmd_remove_frame_execute):
	* src/commands/cmd_new_frame.cpp (cmd_new_frame_execute):
	Changed to use Undoable.

	* src/raster/undoable.h (class Undoable): Added.

2008-09-30  David A. Capello  <davidcapello@gmail.com>

	* src/raster/gfxobj.h (GfxObj): Converted to a class (and all the
	hierarchy of graphics objects).

	* src/tests/: Renamed src/test to src/tests

	* makefile.lst: Project converted to C++

2008-09-29  David A. Capello  <davidcapello@gmail.com>

	* src/widgets/fileview.c (fileview_msg_proc): Fixed a bug when the
	user pressed a key to do an incremental-search but no item where
	selected.

	* src/widgets/colsel.[ch]: Renamed from src/widgets/colsel2.[ch].

	* data/jids/colsel.jid: Removed.

	* src/script/: Removed.

	* src/util/functions.c: From 'src/script/functions.c'.

	* src/script/functions.c (FlattenLayers): Fixed a bug calling
	'layer_configure_as_background' without 'undo_move_layer' before.

	* src/util/clipbrd.c (paste_from_clipboard): Fixed a bug when
	paste the clipboard outside the sprite.

	* src/modules/tools.c (M_PI): Defined for MSVC8.

	* src/widgets/colbut.c (colorbutton_draw): Fixed compilation error
	in MSVC8.

	* src/widgets/colbar.c (colorbar_msg_proc): Fixed a bug little bug
	when drop color in nowhere.

2008-09-28  David A. Capello  <davidcapello@gmail.com>

	* src/modules/tools.c: Added new Curve tool.
	(control_tool): Added support to lock lines in more
	angles (feature request #1961397).

2008-09-27  David A. Capello  <davidcapello@gmail.com>
